# mbed-cloud-client-zephyr

./: CMakeLists.txt
fota/: fota.c  fota_config.h  fota_storage.h  mbed_lib.json
fota/platform/zephyr/: fota_block_device_stubs.c  fota_curr_fw_zephyr.c  fota_storage_zephyr.c  fota_zephyr_flashiap.cpp  fota_zephyr_flashiap.h  fota_zephyr_helper.c  fota_zephyr_helper.h  fota_zephyr_mcuboot.c  fota_zephyr_mcuboot.h
zephyr/: Kconfig.client
zephyr/cmake/: CMakeLists.txt
